<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProjectInfoActivity"
    tools:showIn="@layout/activity_project_info">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:text="Project Name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/projectNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <!--<TextView-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginLeft="14dp"-->
            <!--android:layout_marginTop="280dp"-->
            <!--android:text="Time Worked" />-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/projectNameField"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update" />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete" />

            <TextView
                android:id="@+id/reportTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report"
                android:layout_marginTop="40dp"
                android:textSize="20sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <CheckBox
                android:id="@+id/checkbox_includePomodoros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_opt_incl_pom" />

            <CheckBox
                android:id="@+id/checkbox_includeHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_opt_incl_total_hours" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:text="From"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/reportDateStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="2"
                    android:hint="Date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/reportTimeStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_weight="1"
                    android:hint="Time"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:text="To"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/reportDateEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="2"
                    android:hint="Date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/reportTimeEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_weight="1"
                    android:hint="Time"
                    android:textSize="18sp" />
            </LinearLayout>


            <Button
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Report" />





        </LinearLayout>





        <!--<EditText-->
            <!--android:id="@+id/timeWorkedField"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@+id/updateButton"-->
            <!--android:layout_marginTop="300dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="numberSigned"-->
            <!--android:text="" />-->


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>