<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProjectListActivity"
    tools:showIn="@layout/activity_report">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:id="@+id/ll_report">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/ll_completePomodoros">

            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:text="Completed Pomodoros: "
                />

            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text= "number"
                android:id="@+id/completedPomodoros"
                />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:id="@+id/ll_hoursWorked">

            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:text="Total hours worked: "
                />

            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text= "number"
                android:id="@+id/totalHoursWorked"
                />
        </LinearLayout>

        <TextView
            android:layout_marginHorizontal="7dp"
            android:textSize="39sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sessions"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>
        <ListView
            android:id="@+id/reportSessionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_below="@+id/reportInfo"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>