<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/countDownTimer"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginTop="250dp"
        android:text="25:00"
        android:textAlignment="center"
        android:textSize="56sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="360dp"
        android:text="Start" />

    <!--<Button-->
        <!--android:id="@+id/stopButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="160dp"-->
        <!--android:layout_marginTop="360dp"-->
        <!--android:text="Stop" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Pomodoro Session"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/counterDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/assocProjectDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:textAlignment="center"
        android:text="@string/greeting_pomodoro_session"
        android:textSize="18sp" />

    <Button
        android:id="@+id/viewProjectsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="450dp"
        android:text="View Projects" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="360dp"
        android:text="Reset" />

    <!--<Button-->
        <!--android:id="@+id/logoutButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="150dp"-->
        <!--android:layout_marginTop="550dp"-->
        <!--android:text="Logout" />-->

    <!--<Button-->
        <!--android:id="@+id/logoutButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="320dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="#009688"-->
        <!--android:textColor="#ffffff"-->
        <!--android:text="Logout" />-->

    <!--<include layout="@layout/content_project_list" />-->

    <!--<Button-->
        <!--android:id="@+id/confirmProjectButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="100dp"-->
        <!--android:text="Confirm" />-->
</android.support.design.widget.CoordinatorLayout>